--- a/flutter_launcher_icons.yaml
+++ b/flutter_launcher_icons.yaml
@@ -5,6 +5,8 @@ flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
   image_path: "assets/images/logobookbuddy.png"
+  adaptive_icon_background: "#E5D3B3"
+  adaptive_icon_foreground: "assets/images/logobookbuddy.png"
   min_sdk_android: 21 # android min sdk min:16, default 21
   web:
     generate: true
