--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,8 @@ dependencies:
   firebase_core: ^3.13.0
   cloud_firestore: ^5.6.6
   flutter_launcher_icons: ^0.14.3
-  image_picker: ^0.8.7
+  image_picker: ^1.0.4
+  google_ml_kit: ^0.20.0
 
 dev_dependencies:
   flutter_test:
