--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,12 +39,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   firebase_core: ^3.13.0
+  firebase_auth: ^5.5.4
   cloud_firestore: ^5.6.6
   flutter_launcher_icons: ^0.14.3
   image_picker: ^1.0.4
   google_mlkit_text_recognition: ^0.6.0
   logger: ^2.0.2
   string_similarity: ^2.0.0
+  get: ^4.7.2
 
 
 dev_dependencies:
