--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  google_fonts: ^6.1.0
+  google_fonts: ^6.2.1
   curved_navigation_bar: ^1.0.6
+  image: ^4.2.0
+  tesseract_ocr: ^0.4.1
+  path_provider: ^2.1.1
+  permission_handler: ^11.3.1
   
 
 
@@ -42,11 +46,13 @@ dependencies:
   firebase_auth: ^5.5.4
   cloud_firestore: ^5.6.6
   flutter_launcher_icons: ^0.14.3
-  image_picker: ^1.0.4
-  google_mlkit_text_recognition: ^0.6.0
-  logger: ^2.0.2
-  string_similarity: ^2.0.0
+  image_picker: ^1.1.2
+  google_mlkit_text_recognition: ^0.13.0
+  logger: ^2.4.0
+  string_similarity: ^2.1.0
   get: ^4.7.2
+  cached_network_image: ^3.3.1
+  fluttertoast: ^8.2.8
 
 
 dev_dependencies:
