--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_rating_bar: ^4.0.0
   google_fonts: ^6.2.1
   curved_navigation_bar: ^1.0.6
   image: ^4.2.0
