--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,11 +37,6 @@ dependencies:
   tesseract_ocr: ^0.4.1
   path_provider: ^2.1.1
   permission_handler: ^11.3.1
-  
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   firebase_core: ^3.13.0
   firebase_auth: ^5.5.4
@@ -83,6 +78,11 @@ flutter:
   assets:
     - assets/images/
     - data/ocr_results.json
+    - assets/dictionary.txt
+    - assets/images/grayscale/
+    - assets/images/Contrast Adjustment/
+    - assets/images/Edge Detection/
+
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
